[tool.poetry]
name = "weiqibackend"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
email-validator = "^2.2.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-comprehensions = "^3.16.0"
flake8-mutable = "^1.2.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.12.12"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.1"
flake8-class-attributes-order = {git = "https://github.com/Roman505050/flake8-class-attributes-order.git", rev = "support-properties"}
parameterized = "^0.9.0"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "migrations"
]
inline-quotes = '"'
max-complexity = 10
use_class_attributes_order_strict_mode = true

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
line_length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
